# InsightsMania

./: .env  CSVConversion.ipynb  README.md  app.py  customer.csv  customer.db  customerHourly.csv  pyproject.toml  requirements.txt
