[project]
name = "intern"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.12",
    "fastapi>=0.115.9",
    "google-generativeai>=0.8.5",
    "groq>=0.26.0",
    "ipynb>=0.5.1",
    "langchain>=0.3.25",
    "numpy>=2.3.0",
    "openai>=1.85.0",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
    "streamlit-chat>=0.1.1",
    "tenacity>=9.1.2",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.3",
]
